# aikame

./: .editorconfig  .env.example  .gitignore  README.md  aikame.py  pyproject.toml
dump/: abc.txt
utils/: constants.py  crud_files.py  embeddings.py  exceptions.py  index.py  llm.py  load_files.py  rag.py
utils/llm_integrations/: anthropic.py  gemini.py  openai.py
