[project]
name = "aikame"
version = "0.1.0"
description = "Your local RAG guide with internet access."
authors = [
	{name = "AatirNadim",email = "aatir.nadim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
	"click (>=8.1.8,<9.0.0)",
	"pypdf2 (>=3.0.1,<4.0.0)",
	"faiss-cpu (>=1.9.0.post1,<2.0.0)",
	"numpy (>=1.22.4,<2)",
	"sentence-transformers (>=3.4.0,<4.0.0)",
	"openai (>=1.60.1,<2.0.0)",
	"langchain (>=0.3.17,<0.4.0)",
	"langgraph (>=0.2.69,<0.3.0)",
	"chromadb (>=0.6.3,<0.7.0)",
	"langchain-community (>=0.3.16,<0.4.0)"
]

[tool.autopep8]
ignore = ["E111", "E114", "E121", "E122", "E123", "E124", "E125", "E126", "E127", "E128", "E129", "E131", "E133", "E201", "E202", "E203", "E211", "E221", "E222", "E223", "E224", "E225", "E226", "E227", "E228", "E231", "E241", "E242", "E251", "E261", "E262", "E265", "E266", "E271", "E272", "E273", "E274", "E275"]
indent_size = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aikame="aikame:cli"
